<resources>
    <string name="app_name">&appname;</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="no_more_than">Can\'t order more than %d units</string>
    <string name="no_more_than_star">Can\'t add more than %d unit</string>
    <string name="rupee">&currency;</string>
    <string name="rupee_0">&currency;0</string>
    <string name="about_1_text">&appname; helps you provide a friendly and affordable ride within the Chandigarh tricity area.\nThe rates are affordable, and definitely a good deal when you get them for a friendly ride.</string>
    <string name="password">Password</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="sign_up">Sign Up</string>
    <string name="or">or</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="call_to_book">CALL TO BOOK</string>
    <string name="refresh">REFRESH</string>
    <string name="ok">OK</string>
    <string name="phone_number">Phone No.</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_address">Confirm Address</string>
    <string name="confirm_request">Confirm Request</string>
    <string name="enter_code">Enter Code</string>
    <string name="done">Done</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="cancel">Cancel</string>
    <string name="from">From: </string>
    <string name="to">To: </string>
    <string name="history">History</string>
    <string name="driver_mode">Driver Mode</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="type_delivery_address">Type Delivery Address</string>
    <string name="about">About</string>
    <string name="great">Great :)</string>
    <string name="bad">Bad :(</string>
    <string name="sharing_your_ride_with">Finding your fellow rider</string>
    <string name="distance">Distance</string>
    <string name="call_driver">Call Driver</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="cancel_ride">Cancel Ride</string>
    <string name="cancel_order">CANCEL ORDER</string>
    <string name="ride_time">Ride Time</string>
    <string name="submit">Submit</string>
    <string name="your_login_session_expired">Your Login session has expired. Please login again.</string>
    <string name="alert">Alert</string>
    <string name="cancellation_charges_may_apply">Cancellation charges may apply*</string>
    <string name="your_driver_is_on_his_way">Your Driver is on his way.</string>
    <string name="continue_with_cancellation">Continue with cancellation?</string>
    <string name="cancelled_too_many_rides">Oops! You have cancelled\ntoo many rides.</string>
    <string name="resume_after_24_hours">Your ride booking will resume\nafter 24 hours.</string>
    <string name="ride_summary_bad_text">Apologies for the inconvenience caused. We regret any difficulty you faced with us. Please let us know about the issue.</string>
    <string name="no_current_offer_popup_text">Get free rides by referring &appname; to friends.Every successful referral gets you a free ride.</string>
    <string name="end_ride_with_image_text">Gift your friend a &appname; transaction worth 50 &amp; Get one for yourself as well. </string>
    <string name="first_amount">&currency;599</string>
    <string name="middle_amount">&currency;999</string>
    <string name="last_amount">&currency;1999</string>
    <string name="pay_now">Pay Now</string>
    <string name="amount_range">Recharge amount should be between &currency; 1 - &currency; 5000</string>
    <string name="free_ride_desc">Send friends free rides and \n you\'ll get one too, up to &currency;100!</string>
    <string name="fare_note">Note: This is just an estimate. Actual cost, time and distance may vary</string>
    <string name="upload_contact_title">Do you want to make this ride free?</string>
    <string name="upload_contact_message">By tapping \'YES\' you will automatically \n invite all your contacts.</string>
    <string name="upload_contact_yes">Yes</string>
    <string name="upload_contact_no_thanks">No, Thanks</string>
    <string name="upload_contact_less_contacts">You need to have at least 10 contacts to avail this offer</string>
    <string name="thanks_for_ordering_with_us">Thanks for ordering with us</string>
    <string name="jugnoo_jeanie">&appname; Jeanie</string>
    <string name="add_home">Add Home</string>
    <string name="add_work">Add Work</string>
    <string name="home">Home</string>
    <string name="work">Work</string>
    <string name="set_pickup_location">Set pick up location</string>
    <string name="assigning_state_edit_text_hint">Enter Destination</string>
    <string name="total_fare">TOTAL FARE</string>
    <string name="total_fare_colon">TOTAL FARE: </string>
    <string name="Cash_to_be_paid">CASH TO BE PAID</string>
    <string name="view_invoice">View Invoice</string>
    <string name="submit_feedback_caps">SUBMIT FEEDBACK</string>
    <string name="skip">Skip</string>
    <string name="star_required">* Required</string>
    <string name="leave_a_comment">Leave a comment</string>
    <string name="what_could_we_improve">What could we improve?</string>
    <string name="rupees_value_format">&currency;%s</string>
    <string name="we_take_your_feedback_seriously">We take your feedback seriously. Please give us a rating</string>
    <string name="please_provide_reason_for_rating">Please provide your reason for the rating</string>
    <string name="review_must_be_in">Review must be in 300 letters.</string>
    <string name="order_expereince">How was your Experience?</string>
    <string name="number_of_downloads">Number of\nDownloads</string>
    <string name="number_of_first_rides">Number of\nFirst Rides Taken</string>
    <string name="money_earned">Total Money Earned\nfrom Referrals</string>
    <string name="data_effective_format">*Data effective from %s</string>
    <string name="daily_leaderboard">Daily</string>
    <string name="weekly_leaderboard">Weekly</string>
    <string name="lb_rank">Rank</string>
    <string name="lb_name">Name</string>
    <string name="lb_no_downloads">Downloads</string>
    <string name="priority_tip">PRIORITY TIP</string>
    <string name="priority_tip_message">Prices would be higher to \ngive priority to your ride request</string>
    <string name="the_normal_fare">THE NORMAL\nFARE</string>
    <string name="type">Type </string>
    <string name="type_bottom">to confirm your fare multiplier</string>
    <string name="retry">Retry</string>
    <string name="retry_underline"><u>Retry</u></string>
    <string name="insert_sd_card">Please insert SD Card to use this app</string>
    <string name="nl_min_fare">BASE FARE</string>
    <string name="nl_offers">OFFERS</string>
    <string name="nl_change_locality">CHANGE LOCALITY</string>
    <string name="get_fare_estimate">Get Fare Estimate</string>
    <string name="nl_per_km">Per Km</string>
    <string name="nl_per_min">Per Min</string>
    <string name="service_not_available">Our service is not available in this area</string>
    <string name="nl_forgot_password">Forgot Password</string>
    <string name="nl_forgot_password_help">Please provide your email id or phone number. We will send you the instructions to reset your password.</string>
    <string name="nl_forgot_reset_password">Reset Password</string>
    <string name="nl_splash_terms">By Signing up you agree to our <u>Terms of Use</u></string>
    <string name="paytm_wallet">Paytm Wallet</string>
    <string name="mpesa_wallet">mPesa Wallet</string>
    <string name="nl_add_paytm_wallet">Add Paytm Wallet</string>
    <string name="nl_splash_required">Required</string>
    <string name="nl_splash_optional">optional</string>
    <string name="nl_login">Login</string>
    <string name="nl_log_in">Log In</string>
    <string name="nl_login_facebook">Facebook</string>
    <string name="nl_login_google">Google</string>
    <string name="nl_login_phone_empty_error">Please enter phone number</string>
    <string name="invalid_phone_error">Please enter valid phone number</string>
    <string name="invalid_email_error">Please enter valid email</string>
    <string name="nl_signup">Signup</string>
    <string name="nl_signup_name">Name</string>
    <string name="nl_signup_email">Email</string>
    <string name="nl_signup_promocode">Promocode (optional)</string>
    <string name="nl_otp_verification">Verification</string>
    <string name="nl_otp_enter_otp">Enter OTP</string>
    <string name="nl_change_phone_number">Change Phone Number</string>
    <string name="nl_change_phone_number_please_enter">Please enter your new phone number</string>
    <string name="nl_change_phone_number_enter_new_number">Enter New Phone Number</string>
    <string name="user_debt_pay_via_wallet">Pay via Wallet</string>
    <string name="user_debt_settle_balance_message">Please settle your outstanding balance of &currency;%s before a new transaction</string>
    <string name="user_debt_settle_balance_message_fresh">Please settle your outstanding balance of &currency;%s before a new transaction</string>
    <string name="nl_signup_multiple_accounts_already_created_format">%s accounts have already been created on this device</string>
    <string name="nl_signup_multiple_please_login_through">Please login through one of these accounts</string>
    <string name="nl_signup_multiple_if_you_still_like_to_create_new">If you would still like to create a new account</string>
    <string name="nl_signup_multiple_please_contact_customer_care">Please contact our customer care</string>
    <string name="nl_signup_request_registration">Request Registration</string>
    <string name="nl_signup_request_registration_info">Registration Information</string>
    <string name="nl_signup_request_registration_you_have_already_format">You have already created %s accounts from this device. Please explain the reason for creating a new account.</string>
    <string name="nl_signup_request_registration_revert_you">We will revert to you soon</string>
    <string name="debug">Debug</string>
    <string name="no_results_found">No results found</string>
    <string name="i_want_to_cancel_my_ride_because">I WANT TO CANCEL MY RIDE BECAUSE</string>
    <string name="connection_lost_title">CONNECTION LOST</string>
    <string name="connection_lost_desc">Oops! Your Internet is not working.\nPlease try again.</string>
    <string name="connection_lost_try_again">TRY AGAIN</string>
    <string name="delivery_charges_with_value">Delivery Charges &currency;%s</string>
    <string name="minimum_order_with_value">Minimum order &currency;%s for free delivery</string>
    <string name="rides">Rides</string>
    <string name="fresh">Fresh</string>
    <string name="grocery">Grocery</string>
    <string name="thank_you_for_placing_order">Thank you for placing your order\nwith &appname; Grocery!</string>
    <string name="your_order_id">Your Order ID:</string>
    <string name="meals">Meals</string>
</resources>