<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relative"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >


    <RelativeLayout
        android:id="@+id/topBar"
        android:layout_width="@dimen/screen_width"
        android:layout_height="@dimen/top_bar_height"
        android:background="@color/white" >

        <TextView
            android:id="@+id/textViewTitle"
            android:text="@string/app_name"
            style="@style/title" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:splitMotionEvents="false"
        android:background="@color/menu_item_selector_color"
        android:layout_below="@+id/topBar"

        >

        <TextView
            android:id="@+id/textViewHi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/px_40"
            android:textColor="@color/text_color"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/px_40"
            android:text="@string/hi_username_format"
            />


        <TextView
            android:id="@+id/textViewWeHave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_28"
            android:textColor="@color/text_color"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/px_10"
            android:text="@string/we_have_these_offerings"
            android:layout_below="@+id/textViewHi"
            android:gravity="center"
            />

        <View
            android:layout_width="@dimen/px_100"
            android:layout_height="@dimen/px_2"
            android:layout_below="@+id/textViewWeHave"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/px_10"
            android:background="@color/stroke_color_light"

            />


        <RelativeLayout
            android:id="@+id/relativeLayoutRides"
            android:layout_width="@dimen/px_220"
            android:layout_height="@dimen/px_220"
            android:layout_marginTop="@dimen/px_200"
            android:layout_marginLeft="@dimen/px_100"
            android:background="@drawable/background_white_rounded_bordered"
            >

            <TextView
                android:id="@+id/textViewRides"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/px_40"
                android:textColor="@color/text_color"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/px_40"
                android:text="@string/rides"
                />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/relativeLayoutMeals"
            android:layout_width="@dimen/px_220"
            android:layout_height="@dimen/px_220"
            android:background="@drawable/background_white_rounded_bordered"
            android:layout_marginTop="@dimen/px_200"
            android:layout_marginLeft="@dimen/px_400"
            >

            <TextView
                android:id="@+id/textViewMeals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/px_40"
                android:textColor="@color/text_color"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/px_40"
                android:text="@string/meals"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayoutFresh"
            android:layout_width="@dimen/px_220"
            android:layout_height="@dimen/px_220"
            android:background="@drawable/background_white_rounded_bordered"
            android:layout_marginTop="@dimen/px_480"
            android:layout_marginLeft="@dimen/px_100"
            >

            <TextView
                android:id="@+id/textViewFresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/px_40"
                android:textColor="@color/text_color"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/px_40"
                android:text="@string/fresh"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayoutGrocery"
            android:layout_width="@dimen/px_220"
            android:layout_height="@dimen/px_220"
            android:background="@drawable/background_white_rounded_bordered"
            android:layout_marginTop="@dimen/px_480"
            android:layout_marginLeft="@dimen/px_400"
            >

            <TextView
                android:id="@+id/textViewGrocery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/px_40"
                android:textColor="@color/text_color"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/px_40"
                android:text="@string/grocery"
                />
        </RelativeLayout>


        <TextView
            android:id="@+id/textViewWeHave2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_28"
            android:textColor="@color/text_color"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/px_60"
            android:text="@string/we_have_these_offerings"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            />

        <product.clicklabs.jugnoo.widgets.FAB.FloatingActionMenu
            xmlns:fab="http://schemas.android.com/apk/res-auto"
            android:id="@+id/fabMenuIns"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:paddingBottom="23dp"
            android:paddingLeft="20dp"
            android:tag="DontTouchMe"
            fab:menu_icon="@drawable/ic_fab_jeanie"
            fab:menu_labels_colorNormal="@color/white"
            fab:fab_colorRipple="@color/grey_light_alpha"
            fab:menu_labels_colorPressed="@color/grey_light"
            fab:menu_shadowColor="@color/view_account_text_color"
            fab:menu_animationDelayPerItem="25"
            fab:menu_labels_ellipsize="end"
            fab:menu_labels_singleLine="true"
            fab:menu_backgroundColor="#EBeeeeee"
            fab:menu_labels_position="right">

        </product.clicklabs.jugnoo.widgets.FAB.FloatingActionMenu>

    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_6"
        android:background="@drawable/shadow_down"
        android:layout_below="@+id/topBar"
        />

</RelativeLayout>